       or AMLAs)
     * apply_to=attack - add set_ versions of all existing increase_ keys
     * apply_to=attack - add increase_movement_used and set_movement_used to change the
       number of movement points the attack consumes
   * Ability to patch movetypes to account for custom terrains or damage types
   * Removed y offset by -1 from [message]'s scroll-to-unit logic.
 * Editor:
   * Added Category field and color sliders to the Edit Label panel.
 * Miscellaneous and bug fixes:
   * Removed legacy filesystem API implementation.
   * Fixed Generate Map dialog bug that caused last choice of map
     generator to not be actually selected (bug #23711).
   * Fixed unbound memory read in internal time formatting code with
     specially-crafted input.
   * Child wesnothd processes spawned by the Host Network Game option on
     Windows now display console output directly instead of using stdout.txt
     and stderr.txt.
   * Remember last selected modifications separately for single and multiplayer.
   * Fixed SDL2 compilation issues.
   * Fixed RECRUIT_UNIT_VARIATIONS core WML macro leaking an internal temporary
     variable ($recruited_unit_random_variation).
   * Fixed unit [resistance] and [jamming_costs] not being considered for sync
     check.
   * Fixed problems with slow/poison/petrify sounds (bug #23024) and made the
     sounds play automatically when the status is inflicted in combat, instead
     of being played by attack animations.
   * Fixed OOS on random maps, where clients placed sides in different castles.
   * Fixed some (not all) OOS caused by modifying a sides controller by wml.
   * Fixed wml menu items becoming unsynced in later scenarios.
   * The game now automatically detects whether to show the game connect screen
     between scenarios.
   * Fixed possibility of corrupting saved games in certain instances,
     eg if an add-on tries to set an invalid variable

Version 1.13.1:
 * Security fixes: