@@ -551,8 +551,16 @@ Enemy units cannot see this unit while it is in deep water, except if they have 
         name= _ "backstab"
         description= _ "When used offensively, this attack deals double damage if there is an enemy of the target on the opposite side of the target, and that unit is not incapacitated (turned to stone or otherwise paralyzed)."
         multiply=2
-        backstab=yes
         active_on=offense
+        [filter_opponent]
+        	[filter_adjacent]
+        		adjacent=$other_unit.facing
+        		is_enemy=yes
+        		[not]
+        			status=petrified
+        		[/not]
+        	[/filter_adjacent]
+        [/filter_opponent]
     [/damage]
 #enddef
 
