@@ -1225,6 +1225,9 @@ namespace {
 			a_.get_unit().set_movement(-1, true);
 			return;
 		}
+		
+		a_.get_unit().set_facing(a_.loc_.get_relative_dir(d_.loc_));
+		d_.get_unit().set_facing(d_.loc_.get_relative_dir(a_.loc_));
 
 		a_.get_unit().set_attacks(a_.get_unit().attacks_left()-1);
 		VALIDATE(a_.weapon_ < static_cast<int>(a_.get_unit().attacks().size()),
